log

Thu Mar 10 21:46:59 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7c40e3
Thu Mar 10 21:48:32 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dae682e
